tests/transpiler/x/zig/tail_recursion.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/tail_recursion.zig:12:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/tail_recursion.zig:11:15: note: function cannot return an error
