tests/transpiler/x/zig/tail_recursion.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:24 +0000
const std = @import("std");

fn sum_rec(n: i64, acc: i64) i64 {
    if (n == 0) {
        return acc;
    }
    return sum_rec(n - 1, acc + n);
}

pub fn main() void {
    try std.io.getStdOut().writer().print("{any}\n", .{sum_rec(10, 0)});
}
